# develop-subject

./: .gitignore  .project  X軸動作とBGMの使い方  ahr_develop.cpp  camera_sample.cpp  daikei_test  daikei_x_test  daikei_x_test.cpp  daikei_xy_test  daikei_xy_test.cpp  daikei_y_test  daikei_y_test.cpp  fill_outside_frame  fill_outside_frame.cpp  fill_outside_frame2  fill_outside_frame2.cpp  fill_outside_frame_robot  fill_outside_frame_robot.cpp  fios  fios.cpp  frequency.cpp  frequency_pinall.cpp  frequency_thread.cpp  function_settings.sh  function_settings.txt  locus_test  locus_test.cpp  mallett_detection  mallett_detection.cpp  memo.txt  movement_calc  movement_calc.cpp  movement_calc.cpp.orig  newrasp_all  newrasp_all.cpp  newrasp_all_bak  newrasp_all_bak.cpp  opencv3.0_build-ubuntu15.04.sh  p_m_f_reset  p_m_f_reset.cpp  (+54 more)
.git-old/: COMMIT_EDITMSG  ORIG_HEAD  config  index  packed-refs
ahr/: ahr_develop  ahr_develop.cpp
astah/: AirHockeyクラス図.asta  エアーホッケークラス図.asta
camera/: calibration  calibration.cpp  camera_ipl_sample  camera_ipl_sample.cpp  camera_sample  camera_sample_doble  camera_sample_doble.cpp  camera_sample_double  camera_sample_double.cpp  photo_save_capture  photo_save_capture.cpp  video_capture3.0
contrast/: contrast_trackbar  contrast_trackbar.cpp
cvSampleProject/: ALL_BUILD.vcxproj  CMakeLists.txt  SampleProject.rc  SampleProject.vcxproj  SampleProject.vcxproj.filters  SampleSolution.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  resource.h
frame/: frame_capture  frame_capture.cpp  pack_mallett_frame.cpp  poly_test  poly_test.cpp  test  (+6 more)
(+349 files in other folders)
